--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -15,8 +15,10 @@
     "framer-motion": "^10.15.0",
     "node-sass": "^9.0.0",
     "react": "^18.2.0",
+    "react-awesome-slider": "^4.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.14.2",
     "react-tooltip": "^5.20.0"
   },
